# hoardhog

./: .gitignore  Cargo.toml  LICENSE  README.md
entity/: Cargo.toml
entity/src/: categories.rs  field.rs  group_location.rs  groups.rs  item_field.rs  item_group.rs  item_location.rs  items.rs  locations.rs  mod.rs  prelude.rs  tags.rs  types.rs
entity/src/custom/: items.rs  locations.rs  mod.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
migrations/2023-02-01-222140_create_item/: up.sql
src/: db.rs  main.rs  models.rs  schema.rs  services.rs
src/api/: mod.rs
src/api/app/: list.rs  mod.rs
src/api/items/: create.rs  dbq.rs  delete.rs  find.rs  list.rs  mod.rs  update.rs
src/api/locations/: create.rs  delete.rs  list.rs  mod.rs  update.rs
src/query/: app.rs  items.rs  locations.rs  mod.rs  query.rs
