[package]
name = "hoardhog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", features = ["json"]}
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "serde_json"] }
dotenvy = "0.15"
serde_json = "1.0"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
git = "https://github.com/SergioBenitez/Rocket"
features = ["diesel_postgres_pool"]