[package]
name = "hoardhog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.11", features = [ "sqlx-postgres", "runtime-actix-rustls", "macros", "with-json" ] }
dotenvy = "0.15"
serde_json = "1.0"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
entity = { path = "./entity" }
migration = { path = "./migration" }
optional_struct = "0.3.1"